@@ -16,6 +16,7 @@ Bug fix for "Delete every object and version". Faster and more stable.
 Encryption for Uploads.
 Support for Folders and files with the name "null".
 Removed "Selected Bucket" from Sync and Upload tabs.
+Added "Active Bucket" above search bar.
 
 Version 3.2.1
 
